clusters/my-cluster/monitoring/loki-stack/svc-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-svclb
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app.kubernetes.io/name: grafana
