clusters/my-cluster/monitoring/loki-stack/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki-stack-grafana-tls-svc
spec:
  type: LoadBalancer
  ports:
    - port: 443
      targetPort: 3000
  selector:
    app.kubernetes.io/name: grafana
